Added dl to List

--- a/list/index.html
+++ b/list/index.html
@@ -183,5 +183,13 @@
 			Lorem ipsum dolor sit amet, consectetur adipisicing elitre! Sunt, nihil, iure.
 			</li>
 	</ul>
+
+	<h2>Definition List</h2>
+			<dl>
+  			<dt>Coffee</dt>
+  				<dd>Black hot drink</dd>
+  			<dt>Milk</dt>
+  				<dd>White cold drink</dd>
+			</dl>
 </body>
 </html>
